--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - .env
     ports:
       - "8000:8000"
+    volumes:
+      - ./static/uploads:/app/static/uploads
 
 volumes:
   db_data:
